--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,2 +1,4 @@
-@use 'fonts';
+@use "fonts";
 
+$heading-font-family: "Starjedi", helvetica, arial;
+$body-font-family: "NewsGothicStd", arial, sans-serif;
