--- a/sass/abstracts/_fonts.scss
+++ b/sass/abstracts/_fonts.scss
@@ -9,3 +9,9 @@
   src: url("../fonts/NewsGothicStd.woff") format("woff"),
     url("../fonts/NewsGothicStd.woff2") format("woff2");
 }
+
+@font-face {
+  font-family: "Starjout";
+  src: url("../fonts/starjout-webfont.woff") format("woff"),
+    url("../fonts/starjout-webfont.woff2") format("woff2");
+}
