--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,5 @@
 @use "fonts";
 
-$heading-font-family: "Starjedi", helvetica, arial;
+$heading-font-family: "Starjout", helvetica, arial;
+$sub-heading-font-family: "Starjedi", helvetica, arial;
 $body-font-family: "NewsGothicStd", arial, sans-serif;
