--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,12 +4,18 @@ body {
   font-family: v.$body-font-family;
 }
 
-h2 {
+header h2 {
   font-family: v.$heading-font-family;
-  margin-top: 20px;
+  font-size: 35px;
+  color: rgb(254, 254, 60);
+  padding-bottom: 40px;
+}
+
+h2 {
+  font-family: v.$sub-heading-font-family;
+  margin-top: 60px;
   font-weight: 600;
-  font-size: 24px;
-  margin-bottom: 20px;
+  color: rgb(185, 225, 236);
 }
 
 h3 {
@@ -20,6 +26,7 @@ h3 {
 p {
   font-weight: 300;
   font-size: 16px;
-  line-height: 26px;
   margin-bottom: 20px;
+  color: rgb(255, 208, 127);
+  line-height: 50px;
 }
