--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,11 +1,12 @@
 @use "../abstracts" as a;
-
 header {
   width: 100%;
-  height: 100px;
+  height: 130px;
   position: sticky;
   top: 0;
   background-color: #000;
+  color: yellow;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
