--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,9 +4,10 @@ header {
   height: 130px;
   position: sticky;
   top: 0;
-  background-color: #000;
+  background-color: #1b1d1d;
   color: yellow;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: solid rgb(185, 225, 236) 2px;
 }
